11_-_cloudformation/project-2/cloudformation/RDS-EC2-stack.yaml
Description: Template to create an RDS instance and an EC2 instance
Parameters:

  Vpc:
    Type: AWS::EC2::VPC::Id
    Default: vpc-0ecf11b5ae771cd60

  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: mod11project2

  PrivateSubnet1Id:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0bab586eaae2b9242

  PrivateSubnet2Id:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0b8e0e1dc52653e89

  PublicSubnet1Id:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0b1d49354863152b3

  DBName:
    Type: String
    Default: ytdb

  DBUser:
    Type: String
    Default: admin

  DBPass:
    Type: String
    Description: "It should be less than 8 characters"
    Default: abcd1234

  LatestAmiId:
    Description: Get the latest AMI from System Manager Parameters store
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    # Type: AWS::EC2::Image::Id
    # Default: ami-0c503d55a14d7a5f0

Resources:

  PassParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /student/masterpassword
      Type: String
      Value: !Ref DBPass
      Description: Password of DB admin user

  DBNAMEParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /student/dbname
      Type: String
      Value: !Ref DBName
      Description: Name of DB

  DBUSERParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /student/dbuser
      Type: String
      Value: !Ref DBUser
      Description: Admin username

  EC2SsmIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: [sts:AssumeRole]
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/amazonSSMFullAccess
        - arn:aws:iam::aws:policy/amazonS3FullAccess

  # AppInstanceProfile:
  #   Type: AWS::IAM::InstanceProfile
  #   Properties:
  #     InstanceProfileName: ssm-ec2-instance-profile
  #     Path: /
  #     Roles:
  #       - !Ref EC2SsmIamRole
  #   DependsOn: [EC2SsmIamRole]

  # AppInstance:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: !Ref LatestAmiId
  #     InstanceType: t2.micro
  #     KeyName: !Ref KeyPairName
  #     SecurityGroupIds:
  #       - !Ref AppNodeSG
  #     SubnetId: !Ref PublicSubnet1Id
  #     IamInstanceProfile: !Ref AppInstanceProfile
  #     UserData: !Base64 |
  #       #!/bin/bash
  #       sudo amazon-linux-extras install -y lamp-mariadb10.2-php7.2 php7.2
  #       sudo yum install -y httpd
  #       sudo systemctl start httpd
  #       sudo systemctl enable httpd

  #       sudo usermod -a -G apache ec2-user
  #       sudo chown -R ec2-user:apache /var/www
  #       sudo chmod 2775 /var/www
  #       sudo find /var/www -type d -exec sudo chmod 2775 {} \;
  #       sudo find /var/www -type f -exec sudo chmod 0664 {} \;
  #       sudo mkdir /var/www/inc

  #       DBPASS=$(aws ssm get-parameter --name /student/masterpassword --region us-east-1 --query "Parameter.Value" --output text)
  #       DBENDP=$(aws ssm get-parameter --name /student/endpoint --region us-east-1 --query "Parameter.Value" --output text)
  #       DBUSER=$(aws ssm get-parameter --name /student/dbuser --region us-east-1 --query "Parameter.Value" --output text)
  #       DBNAME=$(aws ssm get-parameter --name /student/dbname --region us-east-1 --query "Parameter.Value" --output text)

  #       sudo aws s3 cp s3://mod11-project1-curly-dolphin-soup-alligator/dbinfo.inc /var/www/inc/
  #       sudo aws s3 cp s3://mod11-project1-curly-dolphin-soup-alligator/SamplePage.php /var/www/html/

  #       sudo sed -i "s/endpoint/${DBENDP}/g" /var/www/inc/dbinfo.inc
  #       sudo sed -i "s/user/${DBUSER}/g" /var/www/inc/dbinfo.inc
  #       sudo sed -i "s/password/${DBPASS}/g" /var/www/inc/dbinfo.inc
  #       sudo sed -i "s/dbname/${DBNAME}/g" /var/www/inc/dbinfo.inc
  #     Tags:
  #       - Key: Name
  #         Value: PHPAPP-server-1

  # RDSInstance:
  #   Type: AWS::RDS::DBInstance
  #   Properties:
  #     DBName: !Ref DBName
  #     MasterUsername: !Ref DBUser
  #     MasterUserPassword: !Ref DBPass
  #     Engine: MySQL
  #     DBInstanceClass: db.t2.micro
  #     AllocatedStorage: '5'
  #     VPCSecurityGroups:
  #       - !Ref DBSecurityGroup
  #     DBInstanceIdentifier: RDSInstance
  #     DBSubnetGroupName: !Ref DBSubnetG

  AppNodeSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: SG to allow SSH access and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  # DBSecurityGroup:
  #   Type: AWS::EC2::SecurityGroup
  #   Properties:
  #     VpcId: !Ref Vpc
  #     GroupDescription: SG to allow communication with DB
  #     SecurityGroupIngress:
  #       - IpProtocol: tcp
  #         FromPort: 3306
  #         ToPort: 3306
  #         SourceSecurityGroupId: !Ref AppNodeSG

  # DBSubnetG:
  #   Type: AWS::RDS::DBSubnetGroup
  #   Properties:
  #     DBSubnetGroupDescription: DB Subnets to use
  #     DBSubnetGroupName: DBSubnets
  #     SubnetIds:
  #       - !Ref PrivateSubnet1Id
  #       - !Ref PrivateSubnet2Id

# Outputs:

#   URL:
#     Description: URL of the website
#     Value: !Join ['', [!GetAtt AppInstance.PublicIp, /, SamplePage.php]]
